# ParrotInk

./: .coverage  .gitignore  .mailmap  .pre-commit-config.yaml  LICENSE  README.md  accuracy_hardness.py  architecture.md  big_log_file.txt  config.example.toml  log2.txt  main.py  non_existent.toml  pyproject.toml  test_bits.py  test_bits_status.py  test_sound.py  verify_indicator.py  verify_integration.py
.gemini_security/: AUDIT_REPORT_20260219.md
.github/: changelog_config.json  release.yml
.github/workflows/: ci.yml  ci_release.yml  release.yml
conductor/: index.md  potential_improvements.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/aai_u3_pro_prompt_20260304/: metadata.json  plan.md  spec.md
conductor/archive/accuracy_eval_20260212/: metadata.json  plan.md  spec.md
conductor/archive/advanced_config_20260210/: metadata.json
conductor/archive/api_validation_onboarding_20260304/: plan.md
conductor/archive/arch_cleanup_20260212/: metadata.json  plan.md  spec.md
conductor/archive/arch_state_overhaul_20260212/: metadata.json  plan.md  spec.md
conductor/archive/asset_based_tray_icons_20260305/: metadata.json  plan.md  spec.md
conductor/archive/audio_pipeline_20260211/: metadata.json
conductor/archive/auditory_feedback_20260210/: index.md  metadata.json  plan.md  spec.md
conductor/archive/auto_provider_selection_20260311/: spec.md
conductor/archive/cancel_click_away_20260210/: index.md  metadata.json  (+2 more)
engine/: anchor.py  app_types.py  audio.py  audio_feedback.py  config.py  config_resolver.py  connection.py  constants.py  credential_ui.py  eval_main.py  gui_main.py  hotkey_ui.py  hud_renderer.py  hud_styles.py  indicator_ui.py  injection.py  injector.py  interaction.py  logging.py  mouse.py  onboarding_ui.py  security.py  signals.py  stats.py  stats_ui.py  types.py  ui.py  ui_bridge.py  ui_menu.py  ui_utils.py
engine/audio/: __init__.py  adapter.py  pipeline.py  processing.py  replay.py  streamer.py
engine/platform_win/: api.py  audio_diag.py  constants.py  hotkey_dialog.py  hotkey_recorder.py  instance.py  keys.py  paths.py  session.py  startup.py
engine/services/: updates.py
engine/transcription/: __init__.py  assemblyai_provider.py  base.py  factory.py  openai_provider.py
eval_results/sample2_comparison/: comparison_report.md  golden_assemblyai.json  golden_openai.json  master_assemblyai.json  master_openai.json  v01_assemblyai.json  v01_openai.json
hotkey_review_pack/: api.py  gui_main.py  hotkey_dialog.py  hotkey_recorder.py  interaction.py
packaging/inno/: parrotink.iss
packaging/pyinstaller/: parrotink_onefile.spec  version_info.txt  voice2text_onefile.spec
scripts/: build_onefile.ps1  bump_version.py  clean_build.ps1
tests/: check_connections.py  conftest.py  debug_aai_u3_pro.py  debug_assemblyai.py  debug_live_timer.py  debug_toast.py  mock_transcription_server.py  repro_exit_flow.py  repro_hud_fail.py  repro_hud_race.py  repro_injection.py  repro_injection_v2.py  repro_injection_v3.py  repro_lock_unlock.py  repro_shutdown.py  repro_shutdown_v2.py  repro_sigint.py  repro_stale_hotkey.py  repro_tray_exit.py  repro_u3_pro_delay.py  simple_sig.py  smoke_main.py  test_anchor.py  test_arabic_rendering.py  test_audio.py  test_audio_adapter.py  test_audio_boundary.py  test_audio_conversion.py  test_audio_device_selection.py  test_audio_replay.py  test_audio_streamer_async.py  test_availability.py  test_config.py  test_config_atomic_save.py  test_config_fidelity.py  test_config_lifecycle.py  test_config_new_schema.py  test_config_observer.py  test_config_onboarding.py  test_config_paths.py  (+76 more)
tests/golden_tools/: README.md  assemblyai_golden.py  auth_utils.py  openai_golden.py
(+307 files in other folders)
