[project]
name = "parrotink"
version = "0.2.16"
description = "Real-time voice-to-text application for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice==0.5.5",
    "numpy>=1.26.0",
    "websockets==16.0",
    "httpx==0.28.1",
    "openai==2.17.0",
    "assemblyai==0.50.0",
    "pystray==0.19.5",
    "pynput==1.8.1",
    "keyring>=25.0.0",
    "pydantic-settings>=2.0.0",
    "pywin32==311; sys_platform == 'win32'",
    "platformdirs>=4.5.1",
    "olefile>=0.46",
    "soxr>=1.0.0",
    "skia-python>=138.0",
    "tomli-w>=1.2.0",
    "keyboard>=0.13.5",
    "win11toast",
    "ttkbootstrap>=1.10.1",
    "darkdetect>=0.8.0",
    "packaging>=26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
    "types-setuptools>=69.1.0",
    "types-pynput>=1.8.1.20250809",
    "types-pywin32>=311.0.0.20251008",
    "types-keyboard>=0.13.2.20250801",
    "pyinstaller>=6.18.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ["hotkey_review_pack"]
# strict = true # Uncomment if you want to go full strict mode

[[tool.mypy.overrides]]
module = [
    "sounddevice",
    "pywin32",
    "win32gui",
    "win32api",
    "win32con",
    "win32process",
    "pystray",
    "pynput",
    "skia",
    "pynput.*",
    "websockets.*",
    "assemblyai.*",
    "openai.*",
    "tomli_w.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "win11toast"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    'integration: marks tests as integration tests (deselect with "-m \"not integration\"")',
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
